# rover

./: CMakeLists.txt  package.xml
Ros2Arduino/: Ros2Arduino.ino
config/: my_controllers.yaml
launch/: joystick.launch.py  launch_sim.launch.py  rsp.launch.py
meshes/: ante_brazo_link.STL  hombro_link.STL  muneca_link.STL  wheel_left_link.STL  wheel_mleft_link.STL  wheel_mright_link.STL  wheel_right_link.STL
public_py/: serial_publisher.py  subscriber_member_function.py
python_teleop/: Ros2Arduino.ino  teleop.py
rviz/: display.rviz
src/: subscriber_member_function.cpp
urdf/: gazebo_control.xacro  rover.csv  rover.urdf.xacro  rover_control.xacro  rover_core.xacro
